# linux-rag-t2

./: .gitignore  AGENTS.md  Makefile  README.md  dev_testing.md  go.work  go.work.sum  main.py  mkdocs.yml  notes.md  progress.md  pyproject.toml
.codex/: config.toml
.codex/prompts/: shibuya.lean.md  shibuya.tools.md  (+6 more)
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/adapters/observability/: telemetry.py
backend/src/adapters/ollama/: client.py
backend/src/adapters/storage/: __init__.py  audit_log.py  catalog.py  index_version.py  quarantine.py
backend/src/adapters/transport/: handlers.py  server.py
backend/src/adapters/transport/handlers/: __init__.py  builders.py  common.py  config.py  errors.py  factory.py  fakes.py  health.py  http.py  ports.py  router.py  serializers.py
backend/src/adapters/transport/handlers/chunking/: __init__.py  builder.py  documents.py  text.py
backend/src/adapters/weaviate/: __init__.py  client.py
backend/src/application/: handler_settings.py  health_service.py  init_service.py  offline_guard.py  query_engine.py  query_metrics.py  query_runner.py  reindex_metrics.py  reindex_service.py  source_catalog.py
backend/src/common/: __init__.py  clock.py  helpers.py  serializers.py
backend/src/domain/: __init__.py  health_service.py  job_recovery.py  models.py  query_service.py  source_service.py
backend/src/ports/: health.py  ingestion.py
backend/src/telemetry/: __init__.py  decorators.py  logger.py  sections.py  tracing.py
docs/: index.md
services/: __init__.py
tests/: conftest.py
(+171 files in other folders)
