[project]
name = "rag-backend"
version = "0.1.0"
description = "Backend service for the local Linux RAG CLIs."
requires-python = ">=3.12"
dependencies = [
    "structlog",
    "weaviate-client",
    "arize-phoenix",
    "pyyaml>=6.0",
]


[dependency-groups]
dev = [
    "build>=1.2.2",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
